[gd_scene load_steps=29 format=3 uid="uid://cao133ey23fvu"]

[ext_resource type="Script" path="res://scenes/HouseFlipper.gd" id="1_h0x04"]
[ext_resource type="Script" path="res://scenes/Grabber.gd" id="2_qklsg"]
[ext_resource type="Texture2D" uid="uid://b8q77i85pdxr3" path="res://textures/boss_paintbrush_icon.png" id="2_qpnd6"]
[ext_resource type="Script" path="res://scenes/House.gd" id="3_8ow2s"]
[ext_resource type="Texture2D" uid="uid://bv6tm12i5tmc4" path="res://textures/kenney_pattern-pack-pixel/Tiles (Color)/tile_0026.png" id="3_x55vs"]
[ext_resource type="Texture2D" uid="uid://p8vu6p3ylad2" path="res://textures/House_idle1.png" id="4_se3il"]
[ext_resource type="Texture2D" uid="uid://3ov0n6deajpv" path="res://textures/House_idle2.png" id="5_w64wo"]
[ext_resource type="Texture2D" uid="uid://clnupsmv2pjgw" path="res://textures/House_right_teeter1.png" id="6_7grgg"]
[ext_resource type="Texture2D" uid="uid://b2tbs6wlqvdd5" path="res://textures/House_idle3.png" id="6_8qj83"]
[ext_resource type="Texture2D" uid="uid://cxjwrmvan8wfw" path="res://textures/couch.png" id="6_qlf88"]
[ext_resource type="Texture2D" uid="uid://bh1114lj31afv" path="res://textures/House_right_teeter2.png" id="7_7xg8i"]
[ext_resource type="Texture2D" uid="uid://d0ba0dro8l5is" path="res://textures/backgrounds/Skyscrapers_of_Shinjuku_2009_January_(revised).jpg" id="7_tka8i"]
[ext_resource type="Texture2D" uid="uid://cunh5fnyc8yea" path="res://textures/lamp.png" id="7_vbvl0"]
[ext_resource type="Texture2D" uid="uid://deowsskww5ot5" path="res://textures/House_right_teeter3.png" id="8_v380u"]
[ext_resource type="Texture2D" uid="uid://bivwnbbghdyg8" path="res://textures/boss_paintbrush.png" id="9_mpii0"]
[ext_resource type="Texture2D" uid="uid://d1s7ranqn54h6" path="res://textures/House_left_teeter1.png" id="10_f0335"]
[ext_resource type="Texture2D" uid="uid://dlt3hgcpqcubd" path="res://textures/House_left_teeter2.png" id="11_n3eqo"]
[ext_resource type="Texture2D" uid="uid://dsl5rlwcgr754" path="res://textures/House_left_teeter3.png" id="12_dm4x3"]

[sub_resource type="Animation" id="Animation_qrmdn"]
resource_name = "idle"
length = 0.9
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_se3il"), ExtResource("5_w64wo"), ExtResource("6_8qj83"), ExtResource("4_se3il")]
}

[sub_resource type="Animation" id="Animation_lj20c"]
resource_name = "teeter_right"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_7grgg"), ExtResource("7_7xg8i"), ExtResource("8_v380u"), ExtResource("6_7grgg")]
}

[sub_resource type="Animation" id="Animation_3rd1j"]
resource_name = "teeter_left"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("10_f0335"), ExtResource("11_n3eqo"), ExtResource("12_dm4x3"), ExtResource("10_f0335")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fv7kc"]
_data = {
"idle": SubResource("Animation_qrmdn"),
"teeter_left": SubResource("Animation_3rd1j"),
"teeter_right": SubResource("Animation_lj20c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4b458"]
size = Vector2(125.865, 124.451)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7550a"]
size = Vector2(1186, 242)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n50nf"]
size = Vector2(394, 1152)

[sub_resource type="QuadMesh" id="QuadMesh_do4v0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_av1we"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5jiaj"]
size = Vector2(1424, 112)

[node name="HouseFlipper" type="Node2D"]
script = ExtResource("1_h0x04")
dialogs = ["Your job today is: ", "*HOUSE FLIPPER%"]
bossTexture = ExtResource("2_qpnd6")

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2(569, 522)
node_a = NodePath("../Grabber")
node_b = NodePath("../Grabber")
softness = 0.4

[node name="House" type="RigidBody2D" parent="."]
position = Vector2(646, 515)
mass = 250.0
sleeping = true
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("3_8ow2s")

[node name="Sprite2D" type="Sprite2D" parent="House"]
position = Vector2(1.2, -0.0750189)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_se3il")

[node name="AnimationPlayer" type="AnimationPlayer" parent="House"]
libraries = {
"": SubResource("AnimationLibrary_fv7kc")
}

[node name="Roof" type="Area2D" parent="House"]
position = Vector2(-1, 12)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="House/Roof"]
position = Vector2(2.5, -54.5)
rotation = 0.785398
shape = SubResource("RectangleShape2D_4b458")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House"]
position = Vector2(-59, 90)
polygon = PackedVector2Array(-17, 1, -17, -103, -29, -125, 60, -183, 151, -126, 142, -105, 142, 1)

[node name="Map" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map"]
position = Vector2(583, -111)
shape = SubResource("RectangleShape2D_7550a")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Map"]
position = Vector2(588, 743)
shape = SubResource("RectangleShape2D_7550a")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Map"]
position = Vector2(-186, 330)
shape = SubResource("RectangleShape2D_n50nf")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Map"]
position = Vector2(1351, 314)
shape = SubResource("RectangleShape2D_n50nf")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Map"]
texture_filter = 1
texture_repeat = 2
position = Vector2(615, 698)
scale = Vector2(1432.5, 152)
mesh = SubResource("QuadMesh_do4v0")
texture = ExtResource("3_x55vs")

[node name="Grabber" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 2
can_sleep = false
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grabber"]
shape = SubResource("CircleShape2D_av1we")

[node name="WinCondition" type="Area2D" parent="."]
position = Vector2(518, 619)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinCondition"]
position = Vector2(67, 47)
shape = SubResource("RectangleShape2D_5jiaj")

[node name="WinConditionTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="RayCast2D" type="RayCast2D" parent="." node_paths=PackedStringArray("grabberRigidBody", "pinJoint")]
target_position = Vector2(0, 1)
hit_from_inside = true
script = ExtResource("2_qklsg")
grabber = NodePath("../Grabber")
grabberRigidBody = NodePath("../Grabber")
pinJoint = NodePath("../PinJoint2D")

[node name="Couch" type="RigidBody2D" parent="."]
position = Vector2(224, 591)
mass = 20.0

[node name="Sprite2D" type="Sprite2D" parent="Couch"]
scale = Vector2(0.08, 0.08)
texture = ExtResource("6_qlf88")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Couch"]
position = Vector2(-60, 24)
polygon = PackedVector2Array(0, 0, -6, -30, 4, -36, 11, -47, 105, -48, 114, -36, 125, -29, 118, 0)

[node name="Lamp" type="RigidBody2D" parent="."]
position = Vector2(348, 581)
mass = 20.0

[node name="Sprite2D" type="Sprite2D" parent="Lamp"]
scale = Vector2(0.08, 0.08)
texture = ExtResource("7_vbvl0")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Lamp"]
position = Vector2(2, -27)
polygon = PackedVector2Array(-11, 61, -7, 13, -13, 12, -6, -2, -1, -2, 7, 12, 0, 13, 4, 61)

[node name="Background" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(569, 345)
scale = Vector2(1.42941, 1.48602)
texture = ExtResource("7_tka8i")

[node name="Boss" type="RigidBody2D" parent="."]
position = Vector2(1097, 582)
mass = 60.0

[node name="Sprite2D" type="Sprite2D" parent="Boss"]
scale = Vector2(0.08, 0.08)
texture = ExtResource("9_mpii0")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boss"]
position = Vector2(2, -27)
polygon = PackedVector2Array(-11, 66, -12, 20, -10, 7, -11, -14, 6, -14, 5, 7, 9, 20, 9, 66)

[connection signal="area_entered" from="WinCondition" to="." method="_on_win_condition_area_entered"]
[connection signal="area_exited" from="WinCondition" to="." method="_on_win_condition_area_exited"]
[connection signal="timeout" from="WinConditionTimer" to="." method="_on_win_condition_timer_timeout"]
